@@ -20,7 +20,7 @@ alias fastfetch-image='fastfetch -c ~/.config/fastfetch/config-image.jsonc'
 alias i-use-arch-btw='fastfetch -c ~/.config/fastfetch/config-image.jsonc --logo arch'
 alias wkill='hyprctl kill'
 alias neofetch='fastfetch -c neofetch'
+alias iscc="wine ~/.wine/drive_c/users/xgui4/AppData/Local/Programs/iss/ISCC.exe"
+
 
 eval "$(bat --completion bash)"
-
-export PATH=$HOME/.config/emacs/bin:$PATH
