@@ -1,5 +1,10 @@
 # CHANGELOG
 
+## Feb 17 Update
+
+- add wine ISCC config
+- fix some starship setting 
+
 ## Feb 13 Update : 
 
 - Re-add info to readme
